Make :first-letter include following punctuation but not first letters that are neither letters nor digits. Bug 399941, r+sr=roc

--HG--
rename : layout/generic/punct_marks.ccmap => layout/generic/punct_marks.x-ccmap